--- a/discovery-microservice/src/main/resources/application.yml
+++ b/discovery-microservice/src/main/resources/application.yml
@@ -4,10 +4,18 @@ server:
 eureka:
   instance:
     hostname: discovery
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 10
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://discovery:${server.port}/eureka/
+  server:
+    enableSelfPreservation: false    
+    renewalThresholdUpdateIntervalMs: 120000
+    evictionIntervalTimerInMs: 5000  
+    useReadOnlyResponseCache: false
+
 
 spring.cloud.config.discovery.enabled: true
